<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home" android:icon="@drawable/ic_home" android:title="@string/home" />
        <item
            android:id="@+id/accnt" android:icon="@drawable/ic_account" android:title="@string/account" />
        <item
            android:id="@+id/fac" android:icon="@drawable/ic_library" android:title="@string/facilities" />
        <item
            android:id="@+id/fin" android:icon="@drawable/ic_euro" android:title="@string/finance" />
    </group>
    <item
        android:icon="@drawable/ic_settings" android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/view" android:icon="@drawable/ic_wallpaper" android:title="@string/appearance" />
            <item
                android:id="@+id/accntset" android:icon="@drawable/ic_account" android:title="@string/account_settings" />
            <item
                android:id="@+id/chatset" android:icon="@drawable/ic_chat" android:title="@string/chat_settings" />
            <item
                android:id="@+id/srchhist" android:icon="@drawable/ic_youtube_searched" android:title="@string/search_history" />
        </menu>

    </item>
    <item
        android:title="@string/social_gestures">
        <menu>
            <item
                android:id="@+id/chat" android:icon="@drawable/ic_chat" android:title="@string/chat" />
            <item
                android:id="@+id/contacts" android:icon="@drawable/ic_people" android:title="@string/contacts" />
            <item
                android:id="@+id/contlist" android:icon="@drawable/ic_list" android:title="@string/contact_list" />
            <item
                android:id="@+id/notifs" android:icon="@drawable/ic_notifications" android:title="@string/notifications" />
            <item
                android:id="@+id/share" android:icon="@drawable/ic_share" android:title="@string/share_app" />
        </menu>
    </item>
    <item
        android:id="@+id/help" android:icon="@drawable/ic_live_help" android:title="@string/help" />
    <item
        android:id="@+id/exit" android:icon="@drawable/ic_close" android:title="@string/exit_app" />

</menu>
